@@ -30,6 +30,8 @@ Version 1.5.3+svn:
    * fix bug where max_experience of stored units was not the true max when
      playing with under 100% exp. settings
    * prevent some negative/nonsense values in direct WML unit modifications
+   * Renamed the advanceto key in [unit_type] to advances_to in order to be
+     consistent with its own and [unit]'s internals.
  * Miscellaneous and bug fixes:
    * Changed side_drop handling not to automaticaly assign AI for side if
      leader is dead (bug #12186)
